src/main/java/com/example/event/error/EventOrganizerException.java
package com.example.event.error;

public class EventOrganizerException extends Exception{
    public EventOrganizerException(String message) {
        super(message);
    }
}
